2002-11-12  Andrew Cagney  <ac131313@redhat.com>

	From 2002-11-11 David Carlton <carlton@math.stanford.edu>
	* generic/gdbtk-stack.c (get_frame_name): Replace call to
	frame_in_dummy with one to deprecated_frame_in_dummy.
	* generic/gdbtk-cmds.c (gdb_loc): Ditto.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	

	* library/srctextwin.itb (do_key): Add arg to
	print call.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	
	
	* library/data.ith: Deleted.
	* library/data.itb: Deleted.
	
2002-11-11  Martin M. Hunt  <hunt@redhat.com>		

	* library/memwin.itb: Supply arg to _update_address.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	
	
	* library/toolbar.tcl: Deleted this obsolete file.
	* library/tclIndex: Rebuilt.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>		

	* library/srcbar.itcl (create_help_menu): For unix systems,
	if compatibility is set to KDE or GNOME, put the help menu
	in the right place. Otherwise put it on the far right, like
	Motif does.

2002-11-11  Martin M. Hunt  <hunt@redhat.com>	
	
	* library/helpviewer.tcl: New file. Finds
	an appropriate help browser and displays the help files.

	* library/vartree.itb: Fix open_help calls.
	
	* library/helpviewer.ith: Deleted.
	* library/helpviewer.itb: Deleted.
	
	* library/prefs.tcl (pref_set_defaults): Remove 
	pref gdb/help/browser. Add pref gdb/help/browsername.  
	We couldn't simply rename because it would break older 
	versions of Insight that expect gdb/help/browser to be 
	a number.

2002-11-08  Martin M. Hunt  <hunt@redhat.com>

	* library/prefs.tcl (pref_save): Fix GDBtkInitVersion.
	(pref_save): Check that value is not null before writing.
	
2002-11-07  Martin M. Hunt  <hunt@redhat.com>

	* library/util.tcl (CygScrolledListbox): Delete.

	* library/srctextwin.itb: Change from CygScrolledListbox
	to iwidgets::scrolledlistbox. Set foreground and background.
	Center popup over source window.

2002-11-06  Martin M. Hunt  <hunt@redhat.com>

	* library/locals.tcl (build_win): Fix so window opens